wordpress/k8s/wordpress-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress
  labels:
    io.kompose.service: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: wordpress-db:3306
        - name: WORDPRESS_DB_NAME
          value: wordpress
        - name: WORDPRESS_DB_PASSWORD_FILE
          value: /run/secrets/db-passwords/db-password-wordpress
        - name: WORDPRESS_DB_USER
          value: wordpress
        image: biarms/wordpress:4.9.8
        name: wordpress
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-htdocs
        - mountPath: "/run/secrets/db-passwords"
          name: wordpress-db-passwords
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: wordpress-htdocs
        persistentVolumeClaim:
          claimName: wordpress-htdocs
      - name: wordpress-db-passwords
        secret:
          secretName: wordpress-db-passwords
status: {}
