wordpress/k8s/wordpress-db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    io.kompose.service: wordpress-db
  name: wordpress-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress-db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: wordpress-db
    spec:
      containers:
        - name: wordpress-db
          image: biarms/mysql:5.5 # OK
          #image: mysql/mysql-server:5.7.30-1.1.16 #10.3.17 => don't have arm64 images for old version (arm64 only exist for 8.0)
          #imagePullPolicy: Always
          #image: mysql/mysql-server:8.0-aarch64: NOK
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "256M"
              cpu: "1"
            limits:
              memory: "512M"
              cpu: "2"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: wordpress-db-data
            - mountPath: "/run/secrets/db-passwords"
              name: wordpress-db-passwords
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: wordpress-db-data
          persistentVolumeClaim:
            claimName: wordpress-db-data
        - name: wordpress-db-passwords
          secret:
            secretName: wordpress-db-passwords
status: {}
