wordpress/k8s/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f stack.yml
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: wordpress-db:3306
        - name: WORDPRESS_DB_NAME
          value: wordpress
        - name: WORDPRESS_DB_PASSWORD_FILE
          value: /run/secrets/db-passwords/db-password.txt
        - name: WORDPRESS_DB_USER
          value: wordpress
        image: biarms/wordpress:4.9.8
        name: wordpress
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: htdocs
        - mountPath: "/run/secrets/db-passwords"
          name: db-passwords
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: htdocs
        persistentVolumeClaim:
          claimName: htdocs
      - name: db-passwords
        secret:
          secretName: db-passwords
status: {}
