wordpress/k8s/wordpress-nginx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress-nginx
  labels:
    io.kompose.service: wordpress-nginx
spec:
  replicas: 1
  # About the replicas settings:
  #   Setting a value > 1 for the replicas is not a good idea, at least for the first installation: when a Wordpress pod is started for the first time and see an empty '/var/www/html' folder,
  #   it launches the provisioning of that folder.
  #   In that case, the logs of the first started pod will look like:
  #     > WordPress not found in /var/www/html - copying now...
  #   But the second pod will do the same, because there is no communication between both instance. In that case, the logs will look like:
  #     > WordPress not found in /var/www/html - copying now...
  #     > WARNING: /var/www/html is not empty! (copying anyhow)
  #
  selector:
    matchLabels:
      io.kompose.service: wordpress-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: wordpress-nginx
    spec:
      # If 2 replicats, don't put them on the same server !
      # See https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: io.kompose.service
                    operator: In
                    values:
                      - wordpress-nginx
              topologyKey: "kubernetes.io/hostname"
      containers:
        - image: nginx
          name: wordpress-nginx
          # To debug nginx, uncomment next line (from https://stackoverflow.com/questions/36287157/docker-compose-nginx-php-fpm-file-not-found)
          # command: [nginx-debug, '-g', 'daemon off;']
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16M"
              cpu: "0.2"
            limits:
              memory: "64M"
              cpu: "1"
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress-htdocs
            - name: wordpress-nginx-conf-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: wordpress-nginx.conf
            - name: wordpress-ngnix-conf-d-volume
              mountPath: /etc/nginx/conf.d/
      restartPolicy: Always
      volumes:
        - name: wordpress-htdocs
          persistentVolumeClaim:
            claimName: wordpress-htdocs
        - name: wordpress-nginx-conf-volume
          configMap:
            name: wordpress-nginx-conf
        - name: wordpress-ngnix-conf-d-volume
          configMap:
            name: wordpress-nginx-conf-d
