wordpress/k8s/wordpress-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f stack.yml
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress-db
  name: wordpress-db
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: wordpress-db
status:
  loadBalancer: {}
